Fix horizontal scroll bar in the home page

--- a/web/showtime/backend/src/main/sass/style.scss
+++ b/web/showtime/backend/src/main/sass/style.scss
@@ -89,7 +89,7 @@ iframe {
 }
 
 .guild-icons-horizontal {
-  width: 100vw;
+  width: 100%;
   overflow: hidden;
 
   .guilds-wrapper {
